packages/css/src/components/Dropdown.css
.f-DropdownList {
  --borderRadius: var(--f-borderRadius--m);
  border-radius: var(--borderRadius);
  background-color: #fff;
  box-shadow: 0px 2px 10px rgba(25, 1, 52, 0.12);
  z-index: calc(var(--f-zIndex--Overlay) + 1);
}

@media (max-width: 460px) {
  /* --f-breakpoint--s */
  /* !important are needed to override inline styles */
  .f-DropdownList {
    top: 50% !important;
    left: var(--f-space--xl) !important;
    right: var(--f-space--xl) !important;
    transform: translateY(-50%) !important;
  }
}

.f-DropdownList .f-Item {
  padding: var(--f-space--m) var(--f-space--xl);
  border-radius: 0;
}

@media (max-width: 460px) {
  /* --f-breakpoint--s */
  .f-DropdownList .f-Item {
    padding-top: var(--f-space--l);
    padding-bottom: var(--f-space--l);
  }
}

.f-DropdownList > *:first-child {
  border-top-left-radius: var(--borderRadius);
  border-top-right-radius: var(--borderRadius);
}

.f-DropdownList > *:last-child {
  border-bottom-left-radius: var(--borderRadius);
  border-bottom-right-radius: var(--borderRadius);
}

.f-DropdownOverlay {
  z-index: 5;
}

@media (min-width: 460px) {
  /* --f-breakpoint--s */
  .f-DropdownOverlay {
    display: none;
  }
}

